compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__assert_last.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main() {\n  let assert x = 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let assert x = 1
}


----- COMPILED NIX
let main = { }: 1; in { inherit main; }
