compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__bad_comma.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\nfn function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit() {\n  Nil\n}\n\nfn identity(x) {\n  x\n}\n\npub fn main() {\n  function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit()\n  |> identity\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit() {
  Nil
}

fn identity(x) {
  x
}

pub fn main() {
  function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit()
  |> identity
}


----- COMPILED NIX
let
  function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit =
    { }: null;
  
  identity = x: x;
  
  main =
    { }:
    let
      _pipe =
        function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit { };
    in
    identity _pipe;
in
{ inherit main; }
