compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__calling_fn_literal.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "pub fn main() {\n  fn(x) { x }(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  fn(x) { x }(1)
}


----- COMPILED NIX
let main = { }: (x: x) 1; in { inherit main; }
