compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__exported_functions.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\npub fn add(x, y) {\n    x + y\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn add(x, y) {
    x + y
}

----- COMPILED NIX
let add = x: y: x + y; in { inherit add; }
