compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__function_formatting.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\npub fn add(the_first_variable_that_should_be_added, the_second_variable_that_should_be_added) {\n  the_first_variable_that_should_be_added + the_second_variable_that_should_be_added\n}"
---
let
  add =
    the_first_variable_that_should_be_added:
    the_second_variable_that_should_be_added:
      the_first_variable_that_should_be_added + the_second_variable_that_should_be_added;
in { inherit add; }
