compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__function_formatting1.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\npub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {\nx + y\n}"
---
let
  this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function =
    x: y: x + y;
in
{
  inherit
    this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function
    ;
}
