compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__functions__function_formatting3.snap
---
source: compiler-core/src/nix/tests/functions.rs
expression: "\npub fn math(x, y) {\n  fn() {\n    x + y\n    x - y\n    2 * x\n  }\n}"
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  math = x: y: { }: let _' = x + y; _'1 = x - y; in seqAll [ _' _'1 ] (2 * x);
in { inherit math; }
